Crash with "assert(VM_Version::supports_sse4_1()) failed" if UseSSE < 4 is set

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: 8u92, 9
    • Component/s: hotspot
    • b126
    • x86, x86_64

      If UseSSE is set to a value smaller than 4, the VM crashes during startup:

      # Internal Error (/oracle/8157842/hotspot/src/cpu/x86/vm/assembler_x86.cpp:3621), pid=3642, tid=3643
      # Error: assert(VM_Version::supports_sse4_1()) failed

      Stack: [0x00007fc28eabc000,0x00007fc28ebbd000], sp=0x00007fc28ebbaf80, free space=1019k
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x158e45f] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x18f
      V [libjvm.so+0x158f24a] VMError::report_and_die(Thread*, char const*, int, char const*, char const*, __va_list_tag*)+0x4a
      V [libjvm.so+0xa2812a] report_vm_error(char const*, int, char const*, char const*, ...)+0xea
      V [libjvm.so+0x64b4d3] Assembler::pinsrd(XMMRegisterImpl*, RegisterImpl*, int)+0x183
      V [libjvm.so+0x10f35ad] MacroAssembler::kernel_crc32(RegisterImpl*, RegisterImpl*, RegisterImpl*, RegisterImpl*, RegisterImpl*)+0x73d
      V [libjvm.so+0x1463bec] StubGenerator::generate_initial()+0x155c
      V [libjvm.so+0x1441ac7] StubGenerator_generate(CodeBuffer*, bool)+0x37
      V [libjvm.so+0x14671a0] StubRoutines::initialize1()+0x120
      V [libjvm.so+0xd137f1] init_globals()+0x71
      V [libjvm.so+0x1504afe] Threads::create_vm(JavaVMInitArgs*, bool*)+0x2ae
      V [libjvm.so+0xe50c9b] JNI_CreateJavaVM+0x9b
      C [libjli.so+0x3933] JavaMain+0x83
      C [libpthread.so.0+0x8182] start_thread+0xc2

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: