8158214: Crash with "assert(VM_Version::supports_sse4_1()) failed" if UseSSE < 4 is set

Do not emit unsupported SSE 4.1 instructions in CRC32 intrinsic.

Reviewed-by: kvn, zmajo